src/style.scss
:root {
	color-scheme: light;
	color: #000;
	--light-gray: #ccc;
	--dark-glass: #{fade-out(#000, 0.9)};
	--extra-dark-glass: #{fade-out(#000, 0.25)};
	--light-glass: #{fade-out(#fff, 0.7)};

	@media (prefers-color-scheme: dark) {
		color-scheme: dark;
		color: #fff;
		--light-gray: #333;
		--dark-glass: #{fade-out(#ccc, 0.8)};
		--extra-dark-glass: #{fade-out(#fff, 0.25)};
		--light-glass: #{fade-out(#000, 0.8)};
	}
}

$breakpoint: 40em;

* {
	box-sizing: border-box;
}

body {
	font-family: sans-serif;
	box-sizing: border-box;
	margin: 0;
	padding: 1rem;
	background-color: var(--light-gray);
	max-width: 40rem;
	margin-inline: auto;
}

button,
input[type="submit"],
input[type="file"],
label {
	cursor: pointer;
}

input[type="search"] {
	color: inherit;
	display: block;
	box-sizing: border-box;
	min-height: 2em;
	min-width: 2em;
	max-width: 100%;
	width: 100%;
	padding: 0.5rem;
	font-size: 1em;
	font-family: monospace;
	background-color: var(--light-glass);
	border: solid 1px transparent;
	border-radius: 0.25rem;
	tab-size: 2;

	&:invalid {
		border-color: #f00;
	}
}

p,
span,
li {
	font-weight: 300;
	line-height: 1.5;
}

a {
	color: inherit;
	transition: opacity 0.1s ease-out;

	&:hover,
	&:focus {
		opacity: 0.8;
	}
}

div#preloader {
	display: flex;
	align-items: center;
	justify-content: center;
	position: fixed;
	top: 0;
	left: 0;
	width: 100vw;
	height: 100vh;
	flex-direction: column;
	background-color: var(--light-gray);
	z-index: 100;
}

header,
section,
footer {
	clear: both;
	margin-bottom: 1em;
}

footer {
	padding-top: 0.5rem;
	font-size: 0.9em;
	display: flex;
	align-items: center;
	justify-content: center;

	>*:not(:first-child)::before {
		content: '•';
		margin-inline: 0.5rem;
	}
}

.controls {
	position: sticky;
	top: -1px;
	padding-block: 0.5rem;
	background-color: var(--light-gray);
	display: grid;
	grid-template-columns: auto 1fr;
	gap: 0.25rem 0.5rem;
	grid-auto-flow: dense;
	align-items: center;
	justify-content: center;

	>label::after {
		content: ':';
	}

	#stats {
		margin: 0;
		grid-column: span 2;
	}
}

#results {
	list-style: none;
	padding: 0;
	margin: 0;
	margin-top: 1rem;
	border-bottom: solid 1px var(--dark-glass);

	li {
		border-top: solid 1px var(--dark-glass);
		padding: 0.25rem;

		>a:first-child {
			font-size: 90%;
		}

		&.null {
			text-align: center;
			padding: 1rem;

			&::before {
				content: '❔ ';
			}

			&.error::before {
				content: '⚠ ';
			}
		}

		div {
			&::before {
				content: '📷 ';
			}

			display: block;
			width: 100%;
			height: unset;
			background-color: var(--light-glass);
			margin-bottom: 0.25rem;
			border-radius: 0.25rem;
			padding: 0.5rem;
		}
	}
}

